--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,11 +22,15 @@
         </activity>
         <activity
             android:name=".ui.CourseDetailActivity"
-            android:label="@string/title_activity_course_detail"
-            android:parentActivityName=".MainActivity" >
+            android:label="@string/app_name"
+            android:parentActivityName=".ui.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="nz.co.jonker.dagger2trial.MainActivity" />
+                android:value=".ui.MainActivity" />
+        </activity>
+        <activity
+            android:name=".BaseActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
